# oplire

./: .gitignore  AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPLIRE-CHAT-SESSION.md  README.md  build.cmd  build.ps1  session-ses_167e.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/plans/: oplire-reset.md
aur/: PKGBUILD
docs/: GAPS.md
electron/: main.js  package-lock.json  package.json  preload.js  tui.js
electron/gui/: index.html
scripts/: install-linux.sh  install-windows.ps1
src/: config.rs  lib.rs  main.rs  watch.rs
src/gui/: index.html  mod.rs  terminal.rs
src/install/: mod.rs
src/proxy/: handlers.rs  mod.rs  server.rs
src/tor/: mod.rs
src/transform/: anthropic.rs  mod.rs
src/warp/: mod.rs  resolver.rs
tests/: install_tests.rs  integration_tests.rs  transform_tests.rs
winget/: oplire.yaml
