[package]
name = "oplire-reset"
version = "0.1.0"
edition = "2021"
description = "OpenCode Limit Reset - Cloudflare WARP tunnel reset tool"
authors = ["Berke Oruc"]
license = "MIT"
repository = "https://github.com/berkeoruc/oplire-reset"
homepage = "https://github.com/berkeoruc/oplire-reset"

[[bin]]
name = "oplire-reset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"