[package]
name = "oplire-reset"
version = "2.6.0"
edition = "2021"
description = "OpenCode Limit Reset + Anthropic Proxy Bridge"
authors = ["Berke Oruc"]
license = "MIT"
repository = "https://github.com/berkeoruc/oplire"
homepage = "https://github.com/berkeoruc/oplire"

[[bin]]
name = "oplire"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.7", features = ["json", "query"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "blocking", "socks"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
open = "5"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"